src/test/ui/issues/issue-26614.stderr
error: compilation successful
  --> $DIR/issue-26614.rs:24:1
   |
LL | / fn main() { //~ ERROR compilation successful
LL | |     let c: <u32 as Mirror>::It = 5;
LL | |     const CCCC: <u32 as Mirror>::It = 5;
LL | | }
   | |_^

error: aborting due to previous error

